@@ -1,3 +1,7 @@
+2009-08-25  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/ieee754/dbl-64/wordsize-64/s_round.c: New file.
+
 2009-08-25  Joseph Myers  <joseph@codesourcery.com>
 
 	* math/s_fdiml.c (__fdiml): Use fpclassify instead of fpclassifyl.
